--- a/journal/templates/journal/create_new_resource.html
+++ b/journal/templates/journal/create_new_resource.html
@@ -1,4 +1,16 @@
+{% extends 'journal/base.html' %}
+
+{% block content %}
 <form method="POST"> {% csrf_token %}
     {{ form.as_p }}
 <input type="submit" value="Save">
 </form>
+
+{% if messages %}
+<ul class="messages">
+    {% for message in messages %}
+    <li  {% if message.tags %} class=" {{ message.tags }} " {% endif %}> {{ message }} </li>
+    {% endfor %}
+</ul>
+{% endif %}
+{% endblock %}
