Before adding upload file functionality

--- a/journal/templates/journal/detail_resources.html
+++ b/journal/templates/journal/detail_resources.html
@@ -1,12 +1,10 @@
 {% extends 'journal/base.html' %}
 
 {% block content %}
-<h1> Resource: "{{ resource.name_text }}"</h1>
-<small>({{ resource.link }})</small></br>
+<h1>{{ resource.name_text }}</h1>
+<small><a href="{{ resource.link }}">({{ resource.link }})</a></small></br>
 <hr>
 
 {{ resource.notes }}
-
-
 
 {% endblock %}
