--- a/journal/templates/journal/create_new_resource.html
+++ b/journal/templates/journal/create_new_resource.html
@@ -1,7 +1,8 @@
 {% extends 'journal/base.html' %}
 
 {% block content %}
-<form method="POST"> {% csrf_token %}
+<form method="POST", enctype="multipart/form-data">
+    {% csrf_token %}
     {{ form.as_p }}
 <input type="submit" value="Save">
 </form>
