day of presentation, majority of functionality present

--- a/journal/templates/journal/base.html
+++ b/journal/templates/journal/base.html
@@ -23,7 +23,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link" href="{% url 'journal:create_new_resource' %}">Create New Resource</a>
-      </li>
+      </li>{% comment %}
       <li class="nav-item dropdown">
         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           Dropdown
@@ -37,7 +37,7 @@
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-      </li>
+      </li>{% endcomment %}
     </ul>
   </div>
 </nav>
